--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 3.2)
 
-#project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
-project(ip_filter VERSION 0.0.1)
+project(ip_filter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+#project(ip_filter VERSION 0.0.1)
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 configure_file(version.h.in version.h)
 
-add_executable(ip_filter_cli main.cpp)
+add_executable(ip_filter main.cpp)
 add_library(vers lib.cpp)
 add_executable(test_version test_version.cpp)
 
-set_target_properties(ip_filter_cli vers test_version PROPERTIES
+set_target_properties(ip_filter vers test_version PROPERTIES
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON
 )
@@ -23,7 +23,7 @@ set_target_properties(test_version PROPERTIES
     INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
 )
 
-target_link_libraries(ip_filter_cli PRIVATE
+target_link_libraries(ip_filter PRIVATE
     vers
 )
 target_link_libraries(test_version
@@ -32,7 +32,7 @@ target_link_libraries(test_version
 )
 
 if (MSVC)
-    target_compile_options(ip_filter_cli PRIVATE
+    target_compile_options(ip_filter PRIVATE
         /W4
     )
     target_compile_options(vers PRIVATE
@@ -42,7 +42,7 @@ if (MSVC)
         /W4
     )
 else ()
-    target_compile_options(ip_filter_cli PRIVATE
+    target_compile_options(ip_filter PRIVATE
         -Wall -Wextra -pedantic 
     )
     target_compile_options(vers PRIVATE
@@ -55,7 +55,7 @@ endif()
 
 
 
-install(TARGETS ip_filter_cli RUNTIME DESTINATION bin)
+install(TARGETS ip_filter RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
