--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uituman4ik:f6fdee75835a66c818dc9ebadcf290afe733ffca "https://api.bintray.com/content/ituman4ik/otus-cpp/helloworld/$TRAVIS_BUILD_NUMBER/helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+  - curl -T ip_filter-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uituman4ik:f6fdee75835a66c818dc9ebadcf290afe733ffca "https://api.bintray.com/content/ituman4ik/otus-cpp/IP_FILTER/$TRAVIS_BUILD_NUMBER/IP_FILTER-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
