--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ configure_file(version.h.in version.h)
 add_executable(ip_filter main.cpp)
 add_library(vers lib.cpp)
 add_executable(test_version test_version.cpp)
-add_executable(test_filter_first test_filter_first.cpp)
+add_executable(test_filter test_filter.cpp)
 
 
 set_target_properties(ip_filter vers test_version PROPERTIES
@@ -21,10 +21,6 @@ set_target_properties(ip_filter vers test_version PROPERTIES
 target_include_directories(vers
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
-#include_directories(
-#    ../include
-#    ${GTEST_INCLUDE_DIRS}
-#)
 set_target_properties(test_version PROPERTIES
     COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
     INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
@@ -38,7 +34,7 @@ target_link_libraries(test_version
     vers
 )
 target_link_libraries(
-    test_filter_first ${GTEST_LIBRARIES} Threads::Threads)
+    test_filter ${GTEST_LIBRARIES} Threads::Threads)
 
 if (MSVC)
     target_compile_options(ip_filter PRIVATE
@@ -50,7 +46,7 @@ if (MSVC)
     target_compile_options(test_version PRIVATE
         /W4
     )
-    target_compile_options(test_filter_first PRIVATE
+    target_compile_options(test_filter PRIVATE
         -Wall -Wextra -pedantic 
     )
 else ()
@@ -63,7 +59,7 @@ else ()
     target_compile_options(test_version PRIVATE
         -Wall -Wextra -pedantic 
     )
-    target_compile_options(test_filter_first PRIVATE
+    target_compile_options(test_filter PRIVATE
         -Wall -Wextra -pedantic 
     )
 endif()
@@ -85,6 +81,6 @@ include(CPack)
 enable_testing()
 
 add_test(test_version test_version)
-add_test(test_filter_first test_filter_first)
+add_test(test_filter test_filter)
 
 
